feat: Enhance SIATA Dashboard with improved forecasts and map features
- Added zone selection and detailed forecast rendering in forecasts.js
- Implemented loading indicators and error handling for forecast data
- Updated HTML structure for better UI/UX in index.html
- Introduced heatmap functionality in map.js with controls for temperature and humidity
- Created a new test.html file for initial testing of functionalities
- Improved marker customization based on available data in the map
- Added heatmap legend and messages for better user feedback

--- a/frontend/test.html
+++ b/frontend/test.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SIATA Dashboard - Benpo</title>
+    <title>SIATA Test</title>
     <link rel="stylesheet" href="css/style_new.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -34,7 +34,9 @@
                     <i class="fas fa-sync-alt"></i> Actualizar
                 </button>
             </div>
-            <div id="forecasts-container"></div>
+            <div id="forecasts-container">
+                <p>Cargando pronósticos...</p>
+            </div>
         </div>
 
         <div id="map-tab" class="tab-content">
@@ -50,13 +52,48 @@
         </div>
     </main>
 
+    <!-- Scripts en orden específico -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/leaflet.heat@0.2.0/dist/leaflet-heat.js"></script>
+
+    <!-- Verificar carga de scripts -->
+    <script>
+        console.log('🔧 Iniciando carga de scripts...');
+        console.log('✅ Leaflet cargado:', typeof L !== 'undefined');
+        console.log('✅ Leaflet Heat cargado:', typeof L.heatLayer !== 'undefined');
+    </script>
+
     <script src="api.js"></script>
+    <script>console.log('✅ API Client cargado:', typeof apiClient !== 'undefined');</script>
+
     <script src="forecasts.js"></script>
+    <script>console.log('✅ Forecasts Manager cargado:', typeof forecastsManager !== 'undefined');</script>
+
     <script src="map.js"></script>
-    <script src="heatmap.js"></script>
+    <script>console.log('✅ Map Manager cargado:', typeof mapManager !== 'undefined');</script>
+
     <script src="app.js"></script>
+    <script>console.log('✅ App cargado:', typeof showTab !== 'undefined');</script>
+
+    <script>
+        // Test inicial
+        console.log('🚀 Iniciando pruebas...');
+
+        // Verificar que todas las funciones existen
+        const checks = [
+            { name: 'showTab', exists: typeof showTab !== 'undefined' },
+            { name: 'apiClient', exists: typeof apiClient !== 'undefined' },
+            { name: 'forecastsManager', exists: typeof forecastsManager !== 'undefined' },
+            { name: 'mapManager', exists: typeof mapManager !== 'undefined' },
+            { name: 'L.heatLayer', exists: typeof L !== 'undefined' && typeof L.heatLayer !== 'undefined' }
+        ];
+
+        checks.forEach(check => {
+            console.log(`${check.exists ? '✅' : '❌'} ${check.name}: ${check.exists ? 'OK' : 'FALTA'}`);
+        });
+
+        console.log('🏁 Pruebas completadas');
+    </script>
 </body>
 
 </html>
